fixed spacing on compose button with exactly 1 gift

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -909,6 +909,7 @@ textarea {
 
       .popupPanel {
         position: relative;
+        padding-bottom: 2.5em;
 
         & > .action {
           position: absolute;
